sass/style.scss
@import "../node_modules/bootstrap/scss/functions",
        "../node_modules/bootstrap/scss/variables",
        "../node_modules/bootstrap/scss/mixins",
        "../node_modules/bootstrap/scss/navbar",
        "../node_modules/bootstrap/scss/reboot",
        "../node_modules/bootstrap/scss/containers",
        "../node_modules/bootstrap/scss/grid";

@font-face {
  font-family: "Neue Machina";
  font-weight: 600;
  font-style: normal;
  src: url("assets/NeueMachina-Bold.woff2") format("woff2");
}

@font-face {
  font-family: "Anicons Regular";
  font-weight: normal;
  font-style: normal;
  src: url("assets/AniconsGX.woff2") format("woff2");
}

:root {
  --primary-color: #ffdd00;
  --fg-color: #{$dark};
  --bg-color: #{$white};
  @include color-scheme(dark) {
    --fg-color: #{$light};
    --bg-color: #{$black};
  }

  --spacing-unit: 20px;
  @include media-breakpoint-up(md) { --spacing-unit: 40px; }
}

body {
  font-family: "Neue Machina", sans-serif;
  font-weight: 600;
  // font-feature-settings: "liga" 0;
  -webkit-hyphens: auto;
  hyphens: auto;
  line-height: 1.2;
  color: var(--fg-color);
  background-color: var(--bg-color);

  margin: var(--spacing-unit);
  @include media-breakpoint-down(sm) { margin-top: 0; }
}

main {
  min-height: calc(100vh - var(--footer-height) - var(--spacing-unit));
  @include media-breakpoint-up(sm) {
    min-height: calc(100vh - var(--footer-height) - var(--spacing-unit) * 2);
  }
}

h1, h2, h3 {
  -webkit-hyphens: none;
  hyphens: none;
}

h2 {
  font-size: 1.5rem;
}

a {
  color: inherit;
  text-decoration: none;

  &:hover, &:focus, &:active {
    color: inherit;
    text-decoration-line: line-through;
    text-decoration-color: var(--primary-color);
    text-decoration-thickness: .1em;
  }
}

figure {
  overflow: hidden;
}

img {
  width: 100%;
  @include color-scheme(dark) { background-color: $gray-100; }
}

#wrapper {
  min-width: 260px;
  max-width: 1200px;
  margin: 0 auto;
}

#sidebar-wrapper {
  min-width: 220px;
  z-index: 1;

  @include media-breakpoint-down(sm) {
    width: 100%;
    top: 0px;
    position: sticky;
    background-color: var(--bg-color);
  }
}

#sidebar {
  #header {
    display: flex;
    justify-content: space-between;
    margin-bottom: var(--spacing-unit);
    @include media-breakpoint-down(sm) { margin-top: var(--spacing-unit); }

    #logo {
      svg {
        fill: var(--fg-color);
        width: 120px;
        @include media-breakpoint-up(sm) { width: 180px; }
      }
    }

    .toggle-nav {
      @include media-breakpoint-up(sm) { display: none; }
      padding: 0;
      border: none;
      background: none;

      .anicon {
        font: 36px "Anicons Regular", sans-serif;
        font-variation-settings: "TIME" 1;
        transition: font-variation-settings 0.4s ease;
        color: var(--primary-color);
        -webkit-user-select: none;
        user-select: none;
      }

      &.close .anicon {
        font-variation-settings: "TIME" 100;
      }
    }
  }

  #sidebar-headings {
    &:not(.show) {
      @include media-breakpoint-down(sm) {
        display: none;
      }
    }

    &.show {
      @include media-breakpoint-down(sm) {
        position: absolute;
        width: 100%;
        left: 0;
        padding: 0 20px 20px;
        background-color: var(--bg-color);
      }
    }

    h2 {
      font-size: 2rem;
      margin: 0;

      &.active {
        color: var(--primary-color);
      }
    }
  }
}

.sticky-top {
  top: var(--spacing-unit);
  @include media-breakpoint-up(sm) {
    position: sticky;
  }
}

footer {
  h2 {
    font-size: 2rem;
  }

  address {
    margin: 0;
  }
}

.fixed-bottom {
  @media (min-height: 600px) {
    @include media-breakpoint-up(sm) { position: fixed; }
    bottom: var(--spacing-unit);
  }
}

.row {
  --bs-gutter-x: 2rem;
}

.col {
  @include media-breakpoint-down(sm) { flex: auto; }
}

.flex-column-reverse {
  @include media-breakpoint-down(md) { flex-direction: column-reverse; }
}

#content {
  p, ul, figure {
    margin-bottom: var(--spacing-unit);
  }

  .col {
    @include media-breakpoint-down(md) { flex: auto; }
  }

  .post-content {
    width: auto;
    @include media-breakpoint-up(md) { width: 40%; }

    .sticky-top {
      @include media-breakpoint-down(md) {
        position: static;
        top: auto;
      }
    }

    .post-title {
      margin: 0;
    }

    .post-info {
      list-style: none;
      padding-left: 0;
    }
  }

  #section {
    a {
      img {
        transition: .8s ease-in-out;
      }

      &:hover, &:focus, &:active {
        img {
          transform: scale(1.05);
        }
      }
    }

    .section-post-titles {
      // @include media-breakpoint-down(md) { display: none; }
      // TODO: vertical center
      display: none;
      @include media-breakpoint-up(md) { display: block; }
      @include media-breakpoint-up(md) {
        display: flex;
        align-items: center;
      }
    }
  }

  #about {
    .about-post-titles {
      @include media-breakpoint-down(md) {
        display: block;
        width: auto;
        margin-bottom: var(--spacing-unit);
      }
    }

    .about-person {
      .avatar {
        width: 80px;
        display: inline-block;

        img {
          margin-bottom: var(--spacing-unit);
        }
      }

      .profile {
        list-style: none;
        display: inline-block;
        vertical-align: middle;
        padding-left: 1.5rem;
      }
    }
  }

  .sticky-top, .image-list {
    >:last-child {
      @include media-breakpoint-up(sm) { margin-bottom: 0; }
    }
  }

  #section >:last-child figure {
    @include media-breakpoint-up(sm) { margin-bottom: 0; }
  }

  #about .about-people >:last-child {
    ul, img {
      @include media-breakpoint-up(sm) { margin-bottom: 0; }
    }
  }
}

